--- a/css/student_profile.css
+++ b/css/student_profile.css
@@ -69,7 +69,9 @@ table {
     background-color: #f2f2f2;
   }
 
-
+  a > img{
+    width: 2em;
+  }
   .profile {
     display: flex;
     flex-direction: column;
