--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Faster+One&display=swap');
+
 body {
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    background: #76b852;
+    background-image: url("/images/index_bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+.background {
+    background-color: #76b852a9;
+    height: 100vh;
 }
 
 .login-container {
@@ -23,8 +36,10 @@ body {
 }
 
 .login-text {
+    font-family: 'Faster One', sans-serif;
+    color: rgb(38, 38, 38);
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2.8rem;
     margin-bottom: 2rem;
 }
 
@@ -39,7 +54,7 @@ body {
     font-size: 14px;
 }
 
-.login-form #login-form-submit, .login-form #register-form-submit {
+.login-form .formBtn {
     text-transform: uppercase;
     outline: 0;
     background: #4CAF50;
@@ -51,18 +66,26 @@ body {
     -webkit-transition: all 0.3 ease;
     transition: all 0.3 ease;
     cursor: pointer;
+    border-radius: 10px;
 }
 
-.login-form #login-form-submit:hover, .login-form #login-form-submit:active, .login-form #login-form-submit:focus {
+.login-form .formBtn:hover, .login-form .formBtn:active, .login-form .formBtn:focus {
     background: #43A047;
 }
 
-.login-form #register-form-submit:hover, .login-form #register-form-submit:active, .login-form #register-form-submit:focus {
-    background: #43A047;
+.login-form input[type="checkbox"] {
+    display: inline-block;
+    width: auto;
+}
+
+.login-form label {
+    font-size: 12px;
+    color: #b3b3b3;
+    padding-left: 5px;
 }
 
 .login-form .message {
-    margin: 15px 0 0;
+    margin: 8px 0 0;
     color: #b3b3b3;
     font-size: 12px;
 }
