--- a/css/reserve.css
+++ b/css/reserve.css
@@ -2,6 +2,7 @@
 
 body {
     margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -17,7 +18,7 @@ body {
 }
 
 #logo {
-    font-family: 'Faster One';
+    font-family: 'Faster One', sans-serif;
     color: black;
     font-size: 25px;
 }
