--- a/css/search_profile.css
+++ b/css/search_profile.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Faster+One&display=swap');
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 #navbar {
     background-color: #4CAF50;
     padding: 15px;
@@ -10,7 +15,7 @@
 }
 
 #logo {
-    font-family: 'Faster One';
+    font-family: 'Faster One', sans-serif;
     color: black;
     font-size: 25px;
 }
