--- a/css/navbar.css
+++ b/css/navbar.css
@@ -29,7 +29,7 @@
 #profile {
     float: right;
     margin: 5px 10px;
-    font-weight: bolder;
+    font-weight: 400;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     color: black;
