--- a/css/student_profile.css
+++ b/css/student_profile.css
@@ -1,6 +1,124 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-body {
+body{
+    margin: 0px;
+    padding: 0px;
+    background: #f5f5f5;
+}
+
+/* Bootstrap Code */
+.ui-w-80 {
+    width: 80px !important;
+    height: auto;
+}
+
+.btn-default {
+    border-color: rgba(24,28,33,0.1);
+    background: rgba(0,0,0,0);
+    color: #4E5155;
+}
+
+label.btn {
+    margin-bottom: 0;
+}
+
+.btn-outline-primary {
+    border-color: #26B4FF;
+    background: transparent;
+    color: #26B4FF;
+}
+
+.btn {
+    cursor: pointer;
+}
+
+.text-light {
+    color: #babbbc !important;
+}
+
+.btn-facebook {
+    border-color: rgba(0,0,0,0);
+    background: #3B5998;
+    color: #fff;
+}
+
+.btn-instagram {
+    border-color: rgba(0,0,0,0);
+    background: #000;
+    color: #fff;
+}
+
+.card {
+    background-clip: padding-box;
+    box-shadow: 0 1px 4px rgba(24,28,33,0.012);
+}
+
+.row-bordered {
+    overflow: hidden;
+}
+
+.account-settings-fileinput {
+    position: absolute;
+    visibility: hidden;
+    width: 1px;
+    height: 1px;
+    opacity: 0;
+}
+
+.account-settings-links .list-group-item.active {
+    font-weight: bold !important;
+}
+
+html:not(.dark-style) .account-settings-links .list-group-item.active {
+    background: transparent !important;
+}
+
+.account-settings-multiselect ~ .select2-container {
+    width: 100% !important;
+}
+
+.light-style .account-settings-links .list-group-item {
+    padding: 0.85rem 1.5rem;
+    border-color: rgba(24, 28, 33, 0.03) !important;
+}
+
+.light-style .account-settings-links .list-group-item.active {
+    color: #4e5155 !important;
+}
+
+.material-style .account-settings-links .list-group-item {
+    padding: 0.85rem 1.5rem;
+    border-color: rgba(24, 28, 33, 0.03) !important;
+}
+
+.material-style .account-settings-links .list-group-item.active {
+    color: #4e5155 !important;
+}
+
+.dark-style .account-settings-links .list-group-item {
+    padding: 0.85rem 1.5rem;
+    border-color: rgba(255, 255, 255, 0.03) !important;
+}
+
+.dark-style .account-settings-links .list-group-item.active {
+    color: #fff !important;
+}
+
+.light-style .account-settings-links .list-group-item.active {
+    color: #4E5155 !important;
+}
+
+.light-style .account-settings-links .list-group-item {
+    padding: 0.85rem 1.5rem;
+    border-color: rgba(24,28,33,0.03) !important;
+}
+
+/* User Defined Code */
+.profilePic {
+    border-radius: 50%;
+}
+
+/* body {
     margin: 0;
     padding: 0;
     background: #4CAF50;
@@ -50,76 +168,76 @@ table {
     border-collapse: collapse;
     width: 100%;
     font-family: Arial, sans-serif;
-  }
+}
 
-  th, td {
+th, td {
     padding: 12px;
     text-align: left;
     border-bottom: 1px solid #ddd;
-  }
+}
 
-  th {
+th {
     background-color: #f2f2f2;
     color: #333;
     text-transform: uppercase;
-  }
+}
 
-  tr:nth-child(even) {
+tr:nth-child(even) {
     background-color: #f9f9f9;
-  }
+}
 
-  tr:hover {
+tr:hover {
     background-color: #f2f2f2;
-  }
+}
 
-  a > img{
+a > img{
     width: 2em;
-  }
-  .profile {
+}
+.profile {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
+}
 
-  .profile-box{
+.profile-box{
     display:flex;
     align-items: center;
     background: #76b852;
     padding: 2em;
-  }
-  
-  .profile-box img {
+}
+
+.profile-box img {
     border-radius: 50%;
     width: 20%;
     height: 20%;
     object-fit: cover;
-  }
-  
-  .details {
+}
+
+.details {
     margin-top: 10px;
     text-align: center;
-  }
-  
-  .buttons {
+}
+
+.buttons {
     margin-top: 20px;
-  }
-  
-  button {
+}
+
+button {
     padding: 10px 20px;
     margin-right: 10px;
-  }
-  
-  .logout-btn {
+}
+
+.logout-btn {
     background-color: darkolivegreen;
     color: white;
-  }
-  
-  .delete-btn {
+}
+
+.delete-btn {
     background-color: red;
     color: white;
-  }
+}
 
 footer{
     height: 50px;
     background: #FFFFFF;
-}
+} */
