--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url("/images/index_bg.jpg");
+    background-image: url("../images/index_bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
