--- a/css/search_profile.css
+++ b/css/search_profile.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Faster+One&display=swap');
 
 body {
+    font-family: 'Roboto', sans-serif; 
+    background: #f5f5f5;
     margin: 0;
     padding: 0;
     height: 160vh;
@@ -15,6 +18,7 @@ table,tr,th{
 }
 
 #icon{
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     border-radius: 50%;
     scale: 75%;
     padding-bottom: 0px;
@@ -22,26 +26,36 @@ table,tr,th{
 }
 
 #descBody{
+    background-color: #fff;
+    border: 1px solid rgba(0,0,0,.125);
     display: flex;
     flex-direction: row;
-    background-color: rgb(190, 190, 190);
-    width: 100%;
+    width: 95%;
     margin: auto;
     border-radius: 10px;
 }
 
 #descRight{
-    position:relative;
+    position: relative;
+    width: 100%;
+    margin: 20px;
+}
+
+#displayName {
+    padding-left: 10px;
+    padding-top: 30px;
 }
 
 #writtendesc{
     background-color: white;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
     margin: 15px;
     border-radius: 5px;
     margin-left: 0px;
     position:absolute;
     bottom: 0;
     padding:10px;
+    height: 130px;
     width: 500px;
 }
 
@@ -75,7 +89,7 @@ table.dataTable thead .sorting_desc_disabled:before {
     position: relative;
     height: 250px;
     overflow: auto;
-    width:1200px;
+    width: 95%;
 }
 
 .table-wrapper-scroll-y {
