--- a/css/search_profile.css
+++ b/css/search_profile.css
@@ -42,7 +42,7 @@ table,tr,th{
 }
 
 #displayName {
-    padding-left: 10px;
+    padding-left: 0px;
     padding-top: 25px;
 }
 
@@ -104,4 +104,56 @@ thead{
     position:sticky;
     background-color: rgba(98, 226, 119, 1);
     top: 0px;
+}
+
+#searchDiv{
+    width: 50%;
+    min-width: 250px;
+    max-width: 700px;
+    height: 180px;
+    text-align: center;
+    margin: auto;
+}
+
+form{
+    background: grey;
+    border-radius: 25px;
+    position: relative;
+}
+
+
+#textSearch{
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 25px;
+    font-size: 20px;
+    padding: 8px 40px 8px 20px;
+    border: none;
+    box-shadow: 0 3px 8px 3px black;
+}
+
+#textSearch:focus{
+    outline: none;
+}
+
+#searchButton{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 100%;
+    border-radius: 50%;
+    cursor: pointer;
+    border: none;
+    background: none;
+    font-size: 18px;
+}
+
+#searchButton i{
+    color: rgb(93, 94, 95);
+}
+
+#searchButton:hover i{
+    color: rgb(162, 163, 163);
 }
