--- a/css/search_profile.css
+++ b/css/search_profile.css
@@ -20,9 +20,17 @@ table,tr,th{
 #icon{
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     border-radius: 50%;
-    scale: 75%;
+    width:250px;
+    height: 250px;
+    position:relative;
+    top:50%;
+    transform: translateY(-50%);
     padding-bottom: 0px;
-    margin-bottom: 0px;
+}
+
+#icondiv{
+    width: 300px;
+    height: 350px;
 }
 
 #descBody{
@@ -31,6 +39,7 @@ table,tr,th{
     display: flex;
     flex-direction: row;
     width: 95%;
+    height:350px;
     margin: auto;
     border-radius: 10px;
 }
