--- a/css/search_profile.css
+++ b/css/search_profile.css
@@ -6,7 +6,7 @@ body {
     background: #f5f5f5;
     margin: 0;
     padding: 0;
-    height: 160vh;
+    height: auto;
 }
 
 .center{
@@ -20,17 +20,17 @@ table,tr,th{
 #icon{
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     border-radius: 50%;
-    width:250px;
+    width: 250px;
     height: 250px;
-    position:relative;
-    top:50%;
+    position: relative;
+    top: 50%;
     transform: translateY(-50%);
     padding-bottom: 0px;
 }
 
 #icondiv{
+    margin: 25px;
     width: 300px;
-    height: 350px;
 }
 
 #descBody{
@@ -70,11 +70,6 @@ table,tr,th{
 
 #searchusername{
     line-height: 15px;
-}
-
-#icondiv{
-    margin: 0px;
-    padding: 0px;
 }
 
 table.dataTable thead .sorting:after,
@@ -117,11 +112,11 @@ thead{
 
 #searchDiv{
     width: 50%;
-    min-width: 250px;
-    max-width: 700px;
-    height: 180px;
     text-align: center;
     margin: auto;
+    padding-top: 20px;
+    padding-bottom: 40px;
+
 }
 
 form{
@@ -139,7 +134,7 @@ form{
     font-size: 20px;
     padding: 8px 40px 8px 20px;
     border: none;
-    box-shadow: 0 3px 8px 3px black;
+    box-shadow: 0 1px 3px 1px black;
 }
 
 #textSearch:focus{
