--- a/css/reserve.css
+++ b/css/reserve.css
@@ -139,6 +139,16 @@ td.reservedSeat.clickedSeat {
     justify-content: center;
 }
 
+#walkInContainer{
+    font-size:17px;
+    margin:10px;
+    margin-top:2px;
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 #anonymous{
     position:relative;
