added time on hover when choosing time slot

--- a/css/reserve.css
+++ b/css/reserve.css
@@ -149,7 +149,6 @@ div.reservedSeat.clickedSeat {
     align-items: center;
 }
 
-
 #anonymous {
     position: relative;
     right: 9px;
@@ -157,4 +156,41 @@ div.reservedSeat.clickedSeat {
 
 .centerTable {
     display: grid;
+}
+
+/* Time On Hover CSS */
+.tooltip {
+    position: relative;
+    border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #fff;
+    color: black;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 120%;
+    left: 50%;
+    margin-left: -80px;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
+.tooltip .tooltiptext::after {
+    content: " ";
+    position: absolute;
+    top: 100%; /* At the bottom of the tooltip */
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: white transparent transparent transparent;
 }
