--- a/NEW/public/css/reserve.css
+++ b/NEW/public/css/reserve.css
@@ -8,6 +8,7 @@ body {
     flex-direction: column;
     height: 100vh;
     font-family: 'Roboto', sans-serif;
+    cursor: default;
 }
 
 #main {
@@ -29,6 +30,13 @@ body {
     justify-content: space-around;
     width: 100%;
     height: 100%;
+}
+
+#labForm,
+#dateForm,
+#timeForm,
+#timeFormEnd {
+    cursor: pointer;
 }
 
 td {
@@ -178,6 +186,7 @@ div.reservedSeat.clickedSeat {
 #anonymous {
     position: relative;
     right: 9px;
+    cursor: pointer;
 }
 
 .centerTable {
