--- a/NEW/public/css/reserve.css
+++ b/NEW/public/css/reserve.css
@@ -48,7 +48,7 @@ td {
 }
 
 #center {
-    background-color: #b3b3b3;
+    background-color: #d1d1d1;
     flex: 4;
     display: flex;
     align-items: center;
@@ -65,7 +65,7 @@ td {
 .seat {
     background-color: green;
     padding: 35px;
-    border: 12px solid #b3b3b3;
+    border: 12px solid #d1d1d1;
     cursor: pointer;
 }
 
@@ -98,7 +98,7 @@ div.reservedSeat.clickedSeat {
     padding-bottom: 0px;
     justify-content: center;
     min-width: 12%;
-    text-align: center;
+    text-align: left;
     display: flex;
     flex-direction: column;
 }
@@ -136,6 +136,7 @@ div.reservedSeat.clickedSeat {
 }
 
 #submit {
+    font-family: 'Roboto', sans-serif;
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
