--- a/NEW/public/css/reserve.css
+++ b/NEW/public/css/reserve.css
@@ -48,7 +48,7 @@ td {
 }
 
 #center {
-    background-color: #d1d1d1;
+    background-color: #FAF9F6;
     flex: 4;
     display: flex;
     align-items: center;
@@ -56,7 +56,7 @@ td {
 }
 
 #bottom {
-    background-color: #b3b3b3;
+    background-color: #d6d6d6;
     flex: 1;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
     display: flex;
@@ -65,18 +65,19 @@ td {
 .seat {
     background-color: green;
     padding: 35px;
-    border: 12px solid #d1d1d1;
+    border: 12px solid #FAF9F6;
     cursor: pointer;
+    border-radius: 45px;
 }
 
 .clickedSeat {
     filter: brightness(80%);
-    border-radius: 15px;
+    border-radius: 20px;
 }
 
 div.reservedSeat.clickedSeat {
     filter: brightness(80%);
-    border-radius: 15px;
+    border-radius: 20px;
 }
 
 #bottom.hidden {
