--- a/NEW/public/css/navbar.css
+++ b/NEW/public/css/navbar.css
@@ -14,23 +14,25 @@
     font-family: 'Faster One', sans-serif;
     color: black;
     font-size: 25px;
+    padding: 0.5%;
 }
 
 #search:hover,
 #login:hover,
 #profile:hover {
     cursor:pointer;
-    /*COLOR HIGHLIGHT CHANGE ME MAKE PURPLE FOR NOW*/
-    color:purple;
+    background-color: #38823a;
+    border-radius: 5px;
 }
 
 #search,
 #login,
 #profile {
     float: right;
-    margin: 5px 10px;
     font-weight: 400;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     color: black;
+    margin-left: 10px;
+    padding: 0.5%;
 }
